[package]
name = "boost-nas"
version = "0.1.0"
edition = "2021"

[dependencies]
tlv-derive = { path = "../tlv-compiler/tlv-derive" }
tlv = { path = "../tlv-compiler/tlv"}
bitfield = "0.17.0"
derive_more = { version = "2", features = ["from", "into"] }

[build-dependencies]
cc = "1.0"  
bindgen = "0.69.1"  # Add bindgen