[package]
name = "boost-nas"
version = "0.1.0"
edition = "2021"

[dependencies]
tlv-derive = { path = "../tlv-compiler/tlv-derive" }
tlv = { path = "../tlv-compiler/tlv"}
auto-new-builder = { path = "../auto-new-builder/auto-new-builder"}
bitfield = "0.19.0"
derive_more = { version = "2", features = ["from", "into"] }
hex = "0.4.3"

[build-dependencies]
cc = "1.0"  
bindgen = "0.69.1"  # Add bindgen