[package]
name = "nas-models"
version = "0.1.0"
edition = "2024"

[dependencies]
bitfield = "0.19.0"
derive_more = { version = "2", features = ["from", "into"] }
hex = "0.4.3"
thiserror = "2.0.12"

tlv = { git = "https://github.com/UnifyAir/tlv-compiler.git", package = "tlv", branch = "master" }
auto-new-builder = { git = "https://github.com/UnifyAir/auto-new-builder.git", package = "auto-new-builder", branch = "master" }

[build-dependencies]
cc = "1.0"
bindgen = "0.69.1"